[tool.poetry]
name = "biblio"
version = "0.1.0"
description = ""
authors = ["Guillaume TÉCHER <guillaumeval.techer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
sqlalchemy = "^1.4.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
